# advent_of_code

./: .pre-commit-config.yaml  pyproject.toml
advent_of_code/: __init__.py
advent_of_code/2015/: 2015_day_1.py  2015_day_10.py  2015_day_2.py  2015_day_3.py  2015_day_4.py  2015_day_5.py  2015_day_8.py
advent_of_code/2015/day_1/: part_1.py  part_2.py
advent_of_code/2015/day_10/: part_1.py
advent_of_code/2015/day_14/: part_2.py
advent_of_code/2015/day_2/: part_1.py
advent_of_code/2015/day_3/: common.py  part_1.py  part_2.py
advent_of_code/2015/day_4/: common.py  part_1.py  part_2.py
advent_of_code/2015/day_5/: part_1.py  part_2.py
advent_of_code/2015/day_6/: common.py  part_1.py  part_2.py
advent_of_code/2015/day_7/: common.py
advent_of_code/2015/day_8/: part_2.py
advent_of_code/2016/day_1/: part_1.py
advent_of_code/2017/: 2017_day_1.py  2017_day_2.py
advent_of_code/2018/: 2018_day_1.py
advent_of_code/2018/day_1/: part_1.py  part_2.py
advent_of_code/2019/day_2/: common.py  part_1.py  part_2_polynomial_finder.py  part_2_trial_and_error.py
advent_of_code/2020/: 2020_day_1.py
advent_of_code/2020/day_4/: part_1.py
advent_of_code/2021/: 2021_day_1.py  2021_day_6.py
under_construction/2015/10/: part_2.py
under_construction/2015/12/: part_1.py
under_construction/2015/14/: part_1.py
under_construction/2015/2/: part_2.py
under_construction/2015/6/: common.py
under_construction/2015/7/: part_1.py  part_2.py
under_construction/2015/8/: part_1.py
under_construction/2016/1/: common.py  (+2 more)
under_construction/2020/: 2020_day_13.py
(+4 files in other folders)
